; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_ldo.c_luaD_seterrorobj.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_ldo.c_luaD_seterrorobj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }

@MEMERRMSG = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [24 x i8] c"error in error handling\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @luaD_seterrorobj(%struct.TYPE_8__* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %9 = load i32, i32* %5, align 4
  switch i32 %9, label %41 [
    i32 130, label %10
    i32 131, label %22
    i32 128, label %33
    i32 129, label %33
  ]

10:                                               ; preds = %3
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @savestack(%struct.TYPE_8__* %11, i64 %12)
  store i32 %13, i32* %7, align 4
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @restorestack(%struct.TYPE_8__* %15, i32 %16)
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %19 = load i8*, i8** @MEMERRMSG, align 8
  %20 = call i32 @luaS_newliteral(%struct.TYPE_8__* %18, i8* %19)
  %21 = call i32 @setsvalue2s(%struct.TYPE_8__* %14, i32 %17, i32 %20)
  br label %41

22:                                               ; preds = %3
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %24 = load i64, i64* %6, align 8
  %25 = call i32 @savestack(%struct.TYPE_8__* %23, i64 %24)
  store i32 %25, i32* %8, align 4
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @restorestack(%struct.TYPE_8__* %27, i32 %28)
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %31 = call i32 @luaS_newliteral(%struct.TYPE_8__* %30, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %32 = call i32 @setsvalue2s(%struct.TYPE_8__* %26, i32 %29, i32 %31)
  br label %41

33:                                               ; preds = %3, %3
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %35 = load i64, i64* %6, align 8
  %36 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = sub nsw i64 %38, 1
  %40 = call i32 @setobjs2s(%struct.TYPE_8__* %34, i64 %35, i64 %39)
  br label %41

41:                                               ; preds = %3, %33, %22, %10
  %42 = load i64, i64* %6, align 8
  %43 = add nsw i64 %42, 1
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %44, i32 0, i32 0
  store i64 %43, i64* %45, align 8
  ret void
}

declare dso_local i32 @savestack(%struct.TYPE_8__*, i64) #1

declare dso_local i32 @setsvalue2s(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @restorestack(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @luaS_newliteral(%struct.TYPE_8__*, i8*) #1

declare dso_local i32 @setobjs2s(%struct.TYPE_8__*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
